--- a/src/wddbyui/cit260/hangman/frames/GameFrame.form
+++ b/src/wddbyui/cit260/hangman/frames/GameFrame.form
@@ -55,9 +55,9 @@
                               </Group>
                               <Component id="jpInstructionsButton" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jGuessWordLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jMysteryWordDiisplayLabel" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
                               <Component id="jEnterLetterLabel" alignment="0" min="-2" pref="238" max="-2" attributes="0"/>
                               <Component id="jRemainingLettersLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="jMysteryWordDiisplayLabel" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="251" max="-2" attributes="0"/>
@@ -181,6 +181,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Submit Letter"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jSubmitLetterButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jAlphabetLabel">
           <Properties>
