--- a/src/wddbyui/cit260/hangman/frames/GameFrame.form
+++ b/src/wddbyui/cit260/hangman/frames/GameFrame.form
@@ -57,25 +57,30 @@
                               <Component id="jGuessWordLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jEnterLetterLabel" alignment="0" min="-2" pref="238" max="-2" attributes="0"/>
                               <Component id="jRemainingLettersLabel" min="-2" max="-2" attributes="0"/>
-                              <Component id="jMysteryWordDiisplayLabel" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
+                              <Component id="jMysteryWordDisplayLabel" alignment="0" pref="254" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="251" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
-                          <Component id="jpTitle" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jAlphabetLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="191" max="-2" attributes="0"/>
-                          <Component id="jExitButton" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
+                                  <Component id="jpTitle" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jAlphabetLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="191" max="-2" attributes="0"/>
+                                  <Component id="jExitButton" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="40" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -90,7 +95,7 @@
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="jGuessWordLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jMysteryWordDiisplayLabel" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="jMysteryWordDisplayLabel" min="-2" pref="35" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Component id="jEnterLetterLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -100,13 +105,13 @@
                           </Group>
                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                           <Component id="jRemainingLettersLabel" min="-2" pref="16" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="jScrollPane1" min="-2" pref="326" max="-2" attributes="0"/>
-                          <EmptySpace pref="29" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="11" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jAlphabetLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jExitButton" min="-2" pref="29" max="-2" attributes="0"/>
@@ -156,7 +161,6 @@
               <Font name="Myriad Pro" size="18" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="W"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                 <LineBorder thickness="2">
@@ -165,6 +169,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jLetterInputFieldActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jEnterLetterLabel">
           <Properties>
@@ -190,7 +197,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Myriad Pro" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="A B C D E F G H I J K L M N O P Q R S T U V W X Y Z"/>
+            <Property name="text" type="java.lang.String" value="a b c d e f g h i j k l m n o p q r s t u v w x y z"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jRemainingLettersLabel">
@@ -201,7 +208,7 @@
             <Property name="text" type="java.lang.String" value="Remaining Letters"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jMysteryWordDiisplayLabel">
+        <Component class="javax.swing.JLabel" name="jMysteryWordDisplayLabel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="de" green="f7" red="ff" type="rgb"/>
@@ -258,7 +265,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Myriad Pro" size="16" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Guess This Word:"/>
+            <Property name="text" type="java.lang.String" value="Guess this word:"/>
           </Properties>
         </Component>
       </SubComponents>
