--- a/src/wddbyui/cit260/hangman/frames/GetNamesFrame.form
+++ b/src/wddbyui/cit260/hangman/frames/GetNamesFrame.form
@@ -97,6 +97,9 @@
               <Font name="Myriad Web Pro" size="16" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jNameTextFieldActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jNameButton">
           <Properties>
